# Smartmemo-backend-Rust

./: .env  Cargo.toml  README.md  config.env  setup-database.ps1
entity/: Cargo.toml
entity/src/: helper_app.rs  mod.rs  prelude.rs  users.rs  voice_memos1.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250725_052107_add_helper_status.rs
src/: main.rs
src/api/: crypto.rs  gemini.rs  memo.rs  memo_api_store_ops.rs  mod.rs  user.rs
src/db/: mod.rs
