[package]
name = "server"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
poem = { version = "3.1.11", features = ["websocket"] }
poem-openapi = { version = "5", features = ["swagger-ui"]}
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
serde = { version = "1", features = ["derive"] }
bcrypt = "0.17.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde_json = "1.0"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
engine = "0.0.0"
validator = { version = "0.16", features = ["derive"]}
futures = "0.3"
futures-util = "0.3"
aes-gcm = "0.10"      # AES-GCM encryption/decryption
aes = "0.8"
dotenvy = "0.15.7"
